--- a/view/adminhtml/templates/connector/hint.phtml
+++ b/view/adminhtml/templates/connector/hint.phtml
@@ -1,4 +1,4 @@
 <div>
     <h2>Styla Connect2</h2>
-    <span><?= __('Do you need to connect your store to Styla? Click here:') ?> <a href="<?= $this->getUrl('styla_connect2/connector/connect') ?>"><?= __('initialize connection') ?></a></span>
+    <span><?php echo __('Do you need to connect your store to Styla? Click here:') ?> <a href="<?php echo $this->getUrl('styla_connect2/connector/connect') ?>"><?php echo __('initialize connection') ?></a></span>
 </div>
