--- a/view/frontend/templates/page/content.phtml
+++ b/view/frontend/templates/page/content.phtml
@@ -1,4 +1,4 @@
-<?php /** @var $this Styla_Connect_Block_Magazine_Content */ ?>
+<?php /** @var $this \Styla\Connect2\Block\Magazine\Content */ ?>
 
 <?php $page = $this->getPage(); ?>
 <?php echo $page->getNoScript() ?>
