--- a/view/frontend/templates/page/head/meta.phtml
+++ b/view/frontend/templates/page/head/meta.phtml
@@ -1,4 +1,4 @@
-<?php /** @var $this Styla_Connect_Block_Magazine_Head */ ?>
+<?php /** @var $this \Styla\Connect2\Block\Magazine\Head */ ?>
 
 <?php foreach ($this->getMetaTags() as $type => $tags): ?>
     <?php foreach ($tags as $tag): ?>
