--- a/view/frontend/layout/stylaconnect2page_cart_add.xml
+++ b/view/frontend/layout/stylaconnect2page_cart_add.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="../../../../../../../lib/internal/Magento/Framework/View/Layout/etc/page_configuration.xsd">        
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <referenceBlock name="content">
         <container name="stylaconnect2.cart_content" as="stylaconnect2.cart_content">
             <!-- add blocks here, to have them rendered after a successful add-to-cart, and returned as html string in the json response -->
