Moving the data attributes in the magazine container element

--- a/view/frontend/templates/page/content.phtml
+++ b/view/frontend/templates/page/content.phtml
@@ -3,10 +3,9 @@
 <?php $page = $this->getPage(); ?>
 <?php echo $page->getNoScript() ?>
 
-<div id="stylaMagazine"></div>
-<script src="<?php echo $page->getScriptUrl()?>" 
+<div id="stylaMagazine"
     data-language="<?php echo $page->getLanguageCode() ?>"
     data-rootpath="<?php echo $this->getRootPath()?>"
-    data-pluginversion="<?php echo $this->getPluginVersion()?>"
- async></script>
+    data-pluginversion="<?php echo $this->getPluginVersion()?>"></div>
+<script src="<?php echo $page->getScriptUrl()?>" async></script>
 <link rel="stylesheet" type="text/css" href="<?php echo $page->getCssUrl() ?>">
