fixed navigation label, routing and other smaller bugs

--- a/view/frontend/layout/stylaconnect2page_page_view.xml
+++ b/view/frontend/layout/stylaconnect2page_page_view.xml
@@ -8,7 +8,8 @@
                 template="Styla_Connect2::page/head/meta.phtml"
                 class="Styla\Connect2\Block\Magazine\Head"
                 name="connect2_magazine_meta"
-        ></block>
+        >
+        </block>
     </referenceBlock>
     
     <referenceBlock name="content">
